[fix] card icon width & gap

--- a/styles/sections/services.css
+++ b/styles/sections/services.css
@@ -31,6 +31,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        width: fit-content;
 
         .proffesion_icon {
           width: 193px;
@@ -89,7 +90,7 @@
 
       .card {
         display: grid;
-        grid-template-columns: 1fr auto;
+        grid-template-columns: min-content auto;
         grid-template-areas:
           "icon description"
           "tags tags";
